# ia_modules

./: .coveragerc  .gitignore  ADVANCED_FEATURES_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLI_TOOL_DOCUMENTATION.md  CONTRIBUTING.md  DASHBOARD_SUMMARY.md  EXECUTION_HOOKS_CHANGELOG.md  FRONTEND_COMPLETE.md  LICENSE  MIGRATION.md  MULTI_AGENT_QUICKSTART.md  PUBLISHING.md  QUICK_START.md  README.md  ROADMAP.md  __init__.py  cleanup.sh  pyproject.toml  test_publish.py
agents/: __init__.py  base_agent.py  communication.py  core.py  orchestrator.py  roles.py  specialist_agents.py  state.py  task_decomposition.py
auth/: __init__.py  middleware.py  models.py  security.py  session.py
benchmarking/: METRICS_GUIDE.md  __init__.py  ci_integration.py  comparison.py  framework.py  profilers.py  reporters.py  telemetry_bridge.py
checkpoint/: __init__.py  core.py  memory.py  redis.py  sql.py
cli/: __init__.py  main.py  validate.py  visualize.py
dashboard/: README.md  __init__.py  requirements.txt  run_dashboard.py
data/: pipeline_models.py
database/: README.md  __init__.py  compare_backends.py  examples.py  interfaces.py  knowledge_base.db  manager.py  migrations.py  providers.py  sqlite_simple.py  test_all_databases.py
docs/: ADVANCED_AI_PATTERNS_GUIDE.md  ADVANCED_FEATURES_IMPLEMENTATION_PLAN.md  ADVANCED_FEATURES_README.md  ADVANCED_MULTI_AGENT_PATTERNS.md  ADVANCED_RAG_IMPLEMENTATION_PLAN.md  AGENT_SYSTEM_EXPLAINED.md  ANALYTICS_INSIGHTS_IMPLEMENTATION_PLAN.md  API_CONNECTORS.md  API_REFERENCE.md  CHECKPOINTING_DESIGN.md  CLI_TOOL_DOCUMENTATION.md  COMPARISON_LANGCHAIN_LANGGRAPH.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_QUICKSTART.md  CYCLIC_GRAPHS.md  DATABASE_INTERFACES.md  DATABASE_SYSTEM_RESEARCH.md  DEVELOPER_EXPERIENCE_IMPLEMENTATION_PLAN.md  DEVELOPER_GUIDE.md  Doctrine_of_Autonomous_Platforms.md  E2E_TEST_ANALYSIS.md  EMBEDDING_MANAGEMENT.md  ENTERPRICE_FEATURES_IMPLEMENTATION_PLAN.md  ENTERPRISE_RELIABILITY_FRAMEWORK_REFERENCE.md  ENTERPRISE_SECURITY_IMPLEMENTATION_PLAN.md  EXECUTION_ARCHITECTURE.md  FEATURES.md  FINAL_HANDOFF.md  GETTING_STARTED.md  GITHUB_SEARCH_TERMS_REFERENCE.md  GUARDRAILS_IMPLEMENTATION_PLAN.md  HITL_CHANNEL_CONFIGURATION.md  HUMAN_IN_LOOP_COMPREHENSIVE.md  HYBRID_SEARCH.md  IA_MODULES_GUIDE.md  IMPLEMENTATION_COMPATIBILITY_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEX.md  ISINSTANCE_AUDIT_REPORT.md  (+30 more)
examples/: constitutional_ai_example.py  exported_config.json  guardrails_complete_example.py  guardrails_config.json  guardrails_config_example.py  guardrails_dialog_example.py  guardrails_engine_example.py  guardrails_example.py  guardrails_execution_example.py  guardrails_retrieval_example.py  memory_example.py
guardrails/: PIPELINE_INTEGRATION.md  README.md  __init__.py  base.py  config_loader.py  engine.py  models.py  pipeline_steps.py
memory/: __init__.py  compression.py  core.py  episodic_memory.py  memory_backend.py  memory_manager.py  redis.py  semantic_memory.py  sql.py  working_memory.py
multimodal/: __init__.py  audio_processor.py  fusion.py  image_processor.py  processor.py  video_processor.py
patterns/: __init__.py  chain_of_thought.py  constitutional_ai.py  react_agent.py  self_consistency.py  tree_of_thoughts.py
pipeline/: __init__.py  condition_functions.py  core.py  db_runner.py  db_step_loader.py  enhanced_pipeline.py  errors.py  execution_tracker.py  graph_pipeline_runner.py  hitl.py  hitl_manager.py  importer.py  in_memory_tracker.py  iterative_refinement.py  llm_provider_service.py  loop_detector.py  loop_executor.py  pipeline_models.py  retry.py  routing.py  runner.py  services.py  test_utils.py
pipeline_run_20250925_032229/: pipeline_result.json
pipeline_run_20250925_032453/: pipeline_result.json
pipeline_run_20250925_032737/: pipeline_result.json
plugins/: __init__.py  base.py  decorators.py  loader.py  registry.py
prompt_optimization/: __init__.py  ab_testing.py  evaluators.py  genetic.py  optimizer.py  reinforcement.py  templates.py
rag/: __init__.py  core.py
release_notes/: RELEASE_NOTES_v0.0.2.md  v0.0.3.md  v0.0.4.md
reliability/: __init__.py  alert_system.py  anomaly_detection.py  circuit_breaker.py  cost_tracker.py  decision_trail.py  evidence_collector.py  metrics.py  mode_enforcer.py  redis_metric_storage.py  replay.py  slo_tracker.py  sql_metric_storage.py  trend_analysis.py
scheduler/: __init__.py  core.py
showcase_app/: .env.example  .gitignore  COMPLETE_STATUS_REPORT.md  FEATURE_EXPANSION_PLAN.md  IMPLEMENTATION_PLAN.md  ISSUES_FOUND.md  LLM_MONITORING.md  LLM_MONITORING_QUICK_REF.md  LLM_SETUP.md  MICROSOFT_INSPIRED_FEATURES.md  MULTI_AGENT_REVIEW.md  MULTI_AGENT_TODO.md  PATTERNS_GUIDE.md  PATTERN_DOCUMENTATION.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  Plan.md  QUICK_REFERENCE.md  QUICK_ROADMAP.md  QUICK_START.md  README.md  REVIEW_E2E_FIXES.md  REVIEW_FEATURES_E2E.md  SETUP_GUIDE.md  SHOWCASE_IMPROVEMENTS.md  docker-compose.yml  test_llm_fallback.py
telemetry/: README.md  __init__.py  exporters.py  integration.py  metrics.py  opentelemetry_exporter.py  tracing.py
tests/: .env.example  100Plan.md  COMPREHENSIVE_TEST_PLAN.md  COMPREHENSIVE_TEST_REVIEW.md  COVERAGE_PROGRESS_FINAL.md  FINAL_TEST_REPORT.md  GITHUB_ACTIONS_SETUP.md  LLM_API_KEYS_SETUP.md  LLM_SETUP_GUIDE.md  MULTI_BACKEND_TESTING.md  OBSERVABILITY_TESTING_GUIDE.md  POSTGRESQL_TESTING_SETUP.md  README.md  TESTING_README.md  TEST_ORGANIZATION_GUIDE.md  __init__.py  conftest.py  docker-compose.test.yml  docker-test-runner.ps1  docker-test-runner.sh  llm_config_example.py  manual_database_test.py  package-lock.json  package.json  pipeline_runner.py  pipeline_runner_with_llm.py  test_condition_functions.py  test_core.py  test_enhanced_pipeline.py  test_hitl_end_to_end.py  test_pipeline_step_import.py  test_runner.py  test_services.py
tools/: __init__.py  advanced_executor.py  core.py  error_handling.py  parallel_executor.py  tool_chain.py  tool_planner.py  tool_registry.py
utils/: __init__.py  llm_adapters.py
(+579 files in other folders)
