[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia_modules"
version = "0.0.3"
description = "Production-ready AI agent framework with enterprise-grade reliability and observability"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "IA Modules Contributors"}
]
keywords = [
    "ai", "agents", "pipeline", "workflow", "orchestration",
    "reliability", "observability", "earf", "llm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
redis = [
    "redis>=5.0.0",
]
sql = [
    "psycopg2-binary>=2.9.0",  # PostgreSQL
    "pymysql>=1.1.0",  # MySQL
]
cli = [
    "graphviz>=0.20.0",
    "click>=8.0.0",
]
profiling = [
    "psutil>=5.9.0",
]
all = [
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "graphviz>=0.20.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ia_modules"
Documentation = "https://ia-modules.readthedocs.io"
Repository = "https://github.com/yourusername/ia_modules"
Issues = "https://github.com/yourusername/ia_modules/issues"

[project.scripts]
ia-modules = "ia_modules.cli.main:main"

[tool.setuptools]
packages = ["ia_modules"]
package-dir = {"ia_modules" = "."}

[tool.setuptools.package-data]
ia_modules = ["*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:The default datetime adapter is deprecated:DeprecationWarning",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]